syntax = "proto3";
package comment;

import "google/protobuf/timestamp.proto";

service CommentService{
    rpc Create(CreateRequest) returns (Response) {}
}

message CreateRequest {
    string comment = 1;
    string name = 2;
}

message Response {
    string id = 1;
    string comment = 2;
    string name = 3;
    google.protobuf.Timestamp created_at = 4;
}